# dooray-mcp

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/skills/dooray-doc-navigator/: SKILL.md
.claude/skills/dooray-doc-navigator/references/: dooray-doc.md
.claude/skills/dooray-doc-navigator/scripts/: extract_toc.py  find_api.py  search_section.py
src/dooray_mcp/: __init__.py  __main__.py  client.py  server.py  utils.py
